# KnowingRP2040

./: .gitignore  README.md
Chapter10/i2c24c32/: CMakeLists.txt  i2c24c32.c
Chapter10/i2cdevice/: CMakeLists.txt  i2cdevice.c
Chapter10/i2cscanner/: CMakeLists.txt  i2cscanner.c
Chapter11/ADXL345/: CMakeLists.txt  adxl345.c
Chapter12/AdcDemo/: CMakeLists.txt  adcdemo.c
Chapter13/KbdDevice/: CMakeLists.txt  kbddevice.c  tusb_config.h  usb_descriptors.c
Chapter13/KbdHost/: CMakeLists.txt  kbdhost.c  tusb_config.h
Chapter13/UsbSerial/: CMakeLists.txt  tusb_config.h  usb_descriptors.c  usbserial.c
Chapter3/DualCore/: CMakeLists.txt  dualcore.c
Chapter4/PioInt/: CMakeLists.txt  pioint.c  pioint.pio
Chapter4/Sleep/: CMakeLists.txt  sleep.c
Chapter5/AdcDma/: CMakeLists.txt  adcdma.c
Chapter5/SpiDma/: CMakeLists.txt  spidma.c
Chapter6/ClocksDemo/: CMakeLists.txt  clocksdemo.c
Chapter6/RTCDemo/: CMakeLists.txt  rtcdemo.c
Chapter6/TimerDemo/: CMakeLists.txt  timerdemo.c
Chapter6/WatchdogDemo/: CMakeLists.txt  watchdogdemo.c
Chapter7/GPIO7Segment/: CMakeLists.txt  gpio7segment.c
Chapter7/GPIOInterrupt/: CMakeLists.txt  gpiointerrupt.c
Chapter7/GPIOKeypad/: CMakeLists.txt  gpiokeypad.c
Chapter7/PWMDemo/: CMakeLists.txt  pwmdemo.c
Chapter7/PWMMeasure/: CMakeLists.txt  pwmmeasure.c
Chapter8/HCSR04/: CMakeLists.txt  hcsr04.c  hcsr04.pio
Chapter8/SerialRx/: CMakeLists.txt  serialrx.c  serialrx.pio
Chapter8/SerialTx/: CMakeLists.txt  serialtx.c  serialtx.pio
Chapter8/SquareWave/: CMakeLists.txt  squarewave.c  squarewave.pio
Chapter9/UartSum/: CMakeLists.txt  uartsum.c
